--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Contact Me</h1>
+    <h3>savyjones@gmail.com</h3>
     <a href="/">Return to Home</a>
     <a href="/photo.html">Photo</a>
   </body>
