--- a/photo.html
+++ b/photo.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photos</title>
+
+    <meta
+      name="description"
+      content="A female web developer, coding in the United States. Woman-owned small business."
+    />
+
+    <title>Photos - Savana Jones - Web Developer</title>
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <h1>Photo</h1>
+    <h1>Photos</h1>
+    <h3>Here are some photos.</h3>
     <img
       src="/images/65626E07-D314-48B6-A6BF-A43B0504BFF1_1_201_a.jpeg"
-      alt="Savana Jones scuba diving, gesturing a peace sign"
+      alt="Savana Jones, woman scuba diving, gesturing a peace sign"
     />
-    <a href="/">Return to Home</a>
-    <a href="/contact.html">Contact Me</a>
+    <a href="/" title="Return to Homepage - Savana Jones - Web Developer"
+      >Return to Home</a
+    >
+    <a href="/contact.html" title="Conact - Savana Jones - Web Developer"
+      >Contact Me</a
+    >
   </body>
 </html>
