--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+
+    <meta
+      name="description"
+      content="A female web developer, coding in the United States. Woman-owned small business."
+    />
+
+    <title>Contact - Savana Jones - Web Developer</title>
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <h1>Contact Me</h1>
-    <h3>savyjones@gmail.com</h3>
-    <a href="/">Return to Home</a>
-    <a href="/photo.html">Photo</a>
+    <h3>Send me an email:</h3>
+    <h4>savyjones@gmail.com</h4>
+    <a href="/" title="Return to Homepage - Savana Jones - Web Developer"
+      >Return to Home</a
+    >
+    <a href="/photo.html" title="View Photos - Savana Jones - Web Developer"
+      >Photo</a
+    >
   </body>
 </html>
