--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello</title>
+
+    <meta
+      name="description"
+      content="A female web developer, coding in the United States. Woman-owned small business."
+    />
+
+    <title>Hello - Savana Jones - Web Developer</title>
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <h1>Hello World!</h1>
-    <a href="/contact.html">Contact Me</a>
-    <a href="/photo.html">Photo</a>
+
+    <h3>This is my Homepage.</h3>
+
+    <a href="/contact.html" title="Conact - Savana Jones - Web Developer"
+      >Contact Me</a
+    >
+    <a href="/photo.html" title="View Photos - Savana Jones - Web Developer"
+      >Photos</a
+    >
   </body>
 </html>
