--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       >Return to Home</a
     >
     <a href="/photo.html" title="View Photos - Savana Jones - Web Developer"
-      >Photo</a
+      >Photos</a
     >
   </body>
 </html>
