minor SEO updates

--- a/photo.html
+++ b/photo.html
@@ -7,7 +7,7 @@
 
     <meta
       name="description"
-      content="A female web developer, coding in the United States. Woman-owned small business."
+      content="View my photos. I am a female web developer, coding in the United States. Woman-owned small business."
     />
 
     <title>Photos - Savana Jones - Web Developer</title>
