--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
     <meta
       name="description"
-      content="A female web developer, coding in the United States. Woman-owned small business."
+      content="Contact Me. A female web developer, coding in the United States. Woman-owned small business."
     />
 
     <title>Contact - Savana Jones - Web Developer</title>
