--- a/photo.html
+++ b/photo.html
@@ -19,6 +19,7 @@
     <img
       src="/images/65626E07-D314-48B6-A6BF-A43B0504BFF1_1_201_a.jpeg"
       alt="Savana Jones, woman scuba diving, gesturing a peace sign"
+      title="Woman Scuba Diving"
     />
     <a href="/" title="Return to Homepage - Savana Jones - Web Developer"
       >Return to Home</a
